Parquet based data loading